--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Released   : 20130308
 			<li class="current_page_item"><a href="index.html">Home</a></li>
 			<li><a href="people.html">People</a></li>
 			<li><a href="research.html">Research</a></li>
-			<li><a href="links.html">Links</a></li>
+			<!-- <li><a href="links.html">Links</a></li> -->
 			<li><a href="publications.html">Publications</a></li>
 		</ul>
 	</div>
