--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Released   : 20130308
 	</div>
 	<!-- end #menu --> 
 </div>
-<div id="banner"><a href="#"><img src="images/stargate_banner.jpeg" width="1200" height="300" alt="" /></a></div>
+<div id="banner"><a href="#"><img src="images/bowie_banner.png" width="1200" height="300" alt="" /></a></div>
 <div id="header-wrapper">
 	<div id="header">
 		<!-- <div id="logo">
