--- a/people.html
+++ b/people.html
@@ -66,7 +66,7 @@ Released   : 20130308
 							<p> </p>
 							<h2> <center> Dr Jake Taylor </center></h2>
 							<p> </p>
-							<h2> <center> Dan Valentine </center></h2>
+							<h2> <center> Daniel Valentine </center></h2>
 							
 						</div>
 					</div>
