--- a/research.html
+++ b/research.html
@@ -90,7 +90,7 @@ Released   : 20130308
 	<!-- end #page --> 
 </div>
 <div id="footer">
-	<p>&copy; 2025 | Banner by H.R. Wakeford | Design by <a href="http://www.freecsstemplates.org">FCT</a>.</p>
+	<p>&copy; 2025 | Banner by H.R. Wakeford | GIF Credit: ExploreAstro | Design by <a href="http://www.freecsstemplates.org">FCT</a>.</p>
 </div>
 <!-- end #footer -->
 </body>
