--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,8 @@ Released   : 20130308
 			<li><a href="research.html">Research</a></li>
 			<!-- <li><a href="links.html">Links</a></li> -->
 			<li><a href="publications.html">Publications</a></li>
-            <li class="current_page_item"><a href="research.html">Contact</a></li>
+			<li><a href="seminars.html">Seminars</a></li>
+            <li class="current_page_item"><a href="contact.html">Contact</a></li>
 		</ul>
 	</div>
 	<!-- end #menu -->
