--- a/research.html
+++ b/research.html
@@ -28,6 +28,7 @@ Released   : 20130308
 			<li class="current_page_item"><a href="research.html">Research</a></li>
 			<!-- <li><a href="links.html">Links</a></li> -->
 			<li><a href="publications.html">Publications</a></li>
+			<li><a href="seminars.html">Seminars</a></li>
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</div>
