Updating upcoming speakers.
Also added Youtube link.

--- a/seminars.html
+++ b/seminars.html
@@ -73,17 +73,16 @@ Released   : 20130308
 			
                         <!-- List of talks -->
                         <ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
-                            <li style="margin-bottom: 20px;">
-                                <strong>Thursday, September 25, 2025, 4pm UK time</strong><br />
-                                <em>Dr Anjali Piette, University of Birmingham, United Kingdom</em><br />
-                                <em>"Demystifying the Sub-Neptune Frontier with JWST"</em><br>
-
-                            </li>
+                            
 
                             <!---->
                             <li style="margin-bottom: 20px;">
                                 <strong>Thursday, October 23, 2025, 4pm UK time</strong><br />
-                                <em>Jiachen Liu (PKU) and Alastair Claringbold. (Warwick)</em>
+                                <em>Jiachen Liu, Peking University, Beijing</em><br>
+								<em>"3D transport-induced chemistry and vertical mixing on temperate sub-Neptune K2-18b"</em><br>
+								<br>
+								<em>Alastair Claringbold. University of Warwick, United Kingdom</em><br>
+								<em>Title Coming Soon!</em><br>
                             </li>
                             <!---->
                         </ul>
@@ -107,6 +106,12 @@ Released   : 20130308
 							  </iframe>
 						</div>
 						<ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, September 25, 2025, 4pm UK time</strong><br />
+                                <em>Dr Anjali Piette, University of Birmingham, United Kingdom</em><br />
+                                <em><a href="https://www.youtube.com/watch?v=uHrTLD1Yxa8" target="_blank" rel="noopener noreferrer">"Demystifying the Sub-Neptune Frontier with JWST"</a></em><br>
+
+                            </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, August 28 2025</strong><br />
                                 <em>Dr Ryan MacDonald, University of St Andrews, United Kingdom</em><br />
