--- a/seminars.html
+++ b/seminars.html
@@ -84,6 +84,18 @@ Released   : 20130308
 								<em>Alastair Claringbold. University of Warwick, United Kingdom</em><br>
 								<em>"Chemistry and Aerosols of Temperate Jupiters"</em><br>
                             </li>
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, November 13, 2025, 4pm UK time</strong><br />
+                                <em>Cyril Gapp, Max Planck Institute for Astronomy, Germany</em><br>
+								<br>
+								<em>Matt Lodge. University of Bristol, United Kingdom</em><br>
+                            </li>
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, November 27, 2025, 4pm UK time</strong><br />
+                                <em>Richard Chatterjee, University of Oxford, United Kingdom</em><br>
+								<br>
+								<em>Dan Valentine. University of Bristol, United Kingdom</em><br>
+                            </li>
                             <!---->
                         </ul>
                     </div>   
