updating steering committee members

--- a/people.html
+++ b/people.html
@@ -62,13 +62,13 @@ Released   : 20130308
 							<p> </p>
 							<h2> <center> Dr Eva-Maria Ahrer </center></h2>
 							<p> </p>
-							<h2> <center> Dr Mark Hammond  </center></h2>
-							<p> </p>
-							<h2> <center> Dr James Kirk  </center></h2>
-							<p> </p>
-							<h2> <center> Dr Jake Taylor </center></h2>
-							<p> </p>
 							<h2> <center> Daniel Valentine </center></h2>
+							<p> </p>
+							<h2> <center> Dr Richard Chatterjee  </center></h2>
+							<p> </p>
+							<h2> <center> Dr Mei Ting (Martha) Mak  </center></h2>
+							<p> </p>
+							<h2> <center> Dr Vatsal Panwar </center></h2>
 							
 						</div>
 					</div>
