Update seminar schedule with new talks
Added new talks and updated existing ones with details.

--- a/seminars.html
+++ b/seminars.html
@@ -75,16 +75,16 @@ Released   : 20130308
                         <ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
                             <!---->
 							<li style="margin-bottom: 20px;">
-                                <strong>Thursday, November 13, 2025, 4pm UK time</strong><br />
-                                <em>Cyril Gapp, Max Planck Institute for Astronomy, Germany</em><br>
-								<br>
-								<em>Nishil Mehta, Observatoire de la Côte d'Azur, France</em><br>
-                            </li>
-							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, November 27, 2025, 4pm UK time</strong><br />
                                 <em>Richard Chatterjee, University of Oxford, United Kingdom</em><br>
 								<br>
 								<em>Dan Valentine. University of Bristol, United Kingdom</em><br>
+                            </li>
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, December 11, 2025, 4pm UK time</strong><br />
+                                <em>Morgan Saidel, Caltech, USA</em><br>
+								<br>
+								<em>Matt Lodge. University of Bristol, United Kingdom</em><br>
                             </li>
                             <!---->
                         </ul>
@@ -108,6 +108,14 @@ Released   : 20130308
 							  </iframe>
 						</div>
 						<ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, November 13, 2025, 4pm UK time</strong><br />
+                                <em>Cyril Gapp, Max Planck Institute for Astronomy, Germany</em><br>
+								<em><a href="https://www.youtube.com/watch?v=nuZUFmjN7CY" target="_blank" rel="noopener noreferrer">"Thermal Dissociation and SiO in the Ultrahot Jupiter WASP-121b</a></em>
+								<br>
+								<em>Nishil Mehta, Observatoire de la Côte d'Azur, France</em><br>
+								<em><a href="https://www.youtube.com/watch?v=P5MfmnAbYMo" target="_blank" rel="noopener noreferrer">Combining JWST Data and General Circulation Models for a 3D Study of the Clouds on Warm Jupiters</a></em>
+                            </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, October 23, 2025, 4pm UK time</strong><br />
                                 <em>Jiachen Liu, Peking University, Beijing</em><br>
