--- a/seminars.html
+++ b/seminars.html
@@ -75,12 +75,6 @@ Released   : 20130308
                         <ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
                             <!---->
 							<li style="margin-bottom: 20px;">
-                                <strong>Thursday, November 27, 2025, 4pm UK time</strong><br />
-                                <em>Richard Chatterjee, University of Oxford, United Kingdom</em><br>
-								<br>
-								<em>Dan Valentine. University of Bristol, United Kingdom</em><br>
-                            </li>
-							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, December 11, 2025, 4pm UK time</strong><br />
                                 <em>Morgan Saidel, Caltech, USA</em><br>
 								<br>
@@ -108,6 +102,13 @@ Released   : 20130308
 							  </iframe>
 						</div>
 						<ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, November 27, 2025, 4pm UK time</strong><br />
+                                <em>Richard Chatterjee, University of Oxford, United Kingdom</em><br>
+								<br>
+								<em>Dan Valentine. University of Bristol, United Kingdom</em><br>
+								<em<a href="https://www.youtube.com/watch?v=lrtLRu26Umk" target="_blank" rel="noopener noreferrer">Eclipse Mapping with Ariel: Future Prospects for a Population-Level Mapping Survey</a></em>
+                            </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, November 13, 2025, 4pm UK time</strong><br />
                                 <em>Cyril Gapp, Max Planck Institute for Astronomy, Germany</em><br>
