Fix HTML tag for YouTube link in seminars.html

--- a/seminars.html
+++ b/seminars.html
@@ -107,7 +107,7 @@ Released   : 20130308
                                 <em>Richard Chatterjee, University of Oxford, United Kingdom</em><br>
 								<br>
 								<em>Dan Valentine. University of Bristol, United Kingdom</em><br>
-								<em<a href="https://www.youtube.com/watch?v=lrtLRu26Umk" target="_blank" rel="noopener noreferrer">Eclipse Mapping with Ariel: Future Prospects for a Population-Level Mapping Survey</a></em>
+								<em><a href="https://www.youtube.com/watch?v=lrtLRu26Umk" target="_blank" rel="noopener noreferrer">Eclipse Mapping with Ariel: Future Prospects for a Population-Level Mapping Survey</a></em>
                             </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, November 13, 2025, 4pm UK time</strong><br />
