--- a/seminars.html
+++ b/seminars.html
@@ -107,15 +107,15 @@ Released   : 20130308
                                 <em>Richard Chatterjee, University of Oxford, United Kingdom</em><br>
 								<br>
 								<em>Dan Valentine. University of Bristol, United Kingdom</em><br>
-								<em><a href="https://www.youtube.com/watch?v=lrtLRu26Umk" target="_blank" rel="noopener noreferrer">Eclipse Mapping with Ariel: Future Prospects for a Population-Level Mapping Survey</a></em>
+								<em><a href="https://www.youtube.com/watch?v=lrtLRu26Umk" target="_blank" rel="noopener noreferrer">"Eclipse Mapping with Ariel: Future Prospects for a Population-Level Mapping Survey"</a></em>
                             </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, November 13, 2025, 4pm UK time</strong><br />
                                 <em>Cyril Gapp, Max Planck Institute for Astronomy, Germany</em><br>
-								<em><a href="https://www.youtube.com/watch?v=nuZUFmjN7CY" target="_blank" rel="noopener noreferrer">"Thermal Dissociation and SiO in the Ultrahot Jupiter WASP-121b</a></em><br>
+								<em><a href="https://www.youtube.com/watch?v=nuZUFmjN7CY" target="_blank" rel="noopener noreferrer">"Thermal Dissociation and SiO in the Ultrahot Jupiter WASP-121b"</a></em><br>
 								<br>
 								<em>Nishil Mehta, Observatoire de la Côte d'Azur, France</em><br>
-								<em><a href="https://www.youtube.com/watch?v=P5MfmnAbYMo" target="_blank" rel="noopener noreferrer">Combining JWST Data and General Circulation Models for a 3D Study of the Clouds on Warm Jupiters</a></em><br>
+								<em><a href="https://www.youtube.com/watch?v=P5MfmnAbYMo" target="_blank" rel="noopener noreferrer">"Combining JWST Data and General Circulation Models for a 3D Study of the Clouds on Warm Jupiters"</a></em><br>
                             </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, October 23, 2025, 4pm UK time</strong><br />
