--- a/seminars.html
+++ b/seminars.html
@@ -105,10 +105,10 @@ Released   : 20130308
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, November 27, 2025, 4pm UK time</strong><br />
                                 <em>Richard Chatterjee, University of Oxford, United Kingdom</em><br>
-								<em>"Predicting the Fate of Rocky Exoplanet Atmospheres"</em>
+								<em>"Predicting the Fate of Rocky Exoplanet Atmospheres"</em><br>
 								<br>
 								<em>Dan Valentine. University of Bristol, United Kingdom</em><br>
-								<em><a href="https://www.youtube.com/watch?v=lrtLRu26Umk" target="_blank" rel="noopener noreferrer">"Eclipse Mapping with Ariel: Future Prospects for a Population-Level Mapping Survey"</a></em>
+								<em><a href="https://www.youtube.com/watch?v=lrtLRu26Umk" target="_blank" rel="noopener noreferrer">"Eclipse Mapping with Ariel: Future Prospects for a Population-Level Mapping Survey"</a></em><br>
                             </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, November 13, 2025, 4pm UK time</strong><br />
