--- a/seminars.html
+++ b/seminars.html
@@ -77,8 +77,10 @@ Released   : 20130308
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, December 11, 2025, 4pm UK time</strong><br />
                                 <em>Morgan Saidel, Caltech, USA</em><br>
+								<em>"The First Dedicated Survey of Atmospheric Escape from Planets Orbiting Hot Stars"</em><br>
 								<br>
 								<em>Matt Lodge. University of Bristol, United Kingdom</em><br>
+								<em>"VIRGA v2.0: Fractal Aggregate Clouds in Warm Neptunes, Hot Jupiters and Brown Dwarfs"</em><br>
                             </li>
                             <!---->
                         </ul>
