--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@ Released   : 20130308
 	</div>
 	<!-- end #menu -->
 </div>
-<div id="banner"><a href="#"><img src="images/bowie_banner.png" width="1200" height="300" alt="" /></a></div>
+<div id="banner"><a href="#"><img src="images/BOWIE+banner_v1.png" width="1200" height="300" alt="" /></a></div>
 <div id="header-wrapper">
 	<div id="header">
 		<!-- <div id="logo">
