--- a/seminars.html
+++ b/seminars.html
@@ -75,12 +75,13 @@ Released   : 20130308
                         <ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
                             <!---->
 							<li style="margin-bottom: 20px;">
-                                <strong>Thursday, December 11, 2025, 4pm UK time</strong><br />
-                                <em>Morgan Saidel, Caltech, USA</em><br>
-								<em>"The First Dedicated Survey of Atmospheric Escape from Planets Orbiting Hot Stars"</em><br>
-								<br>
-								<em>Matt Lodge. University of Bristol, United Kingdom</em><br>
-								<em>"VIRGA v2.0: Fractal Aggregate Clouds in Warm Neptunes, Hot Jupiters and Brown Dwarfs"</em><br>
+                                <strong>Thursday, January 22, 2026, 4pm UK time</strong><br />
+                                <em>To be announced.</em><br>
+								
+                            </li>
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, April 23, 2026, 4pm UK time</strong><br />
+                                <em>Cathal Maguire, University of Bristol, UK</em><br>
                             </li>
                             <!---->
                         </ul>
@@ -104,6 +105,14 @@ Released   : 20130308
 							  </iframe>
 						</div>
 						<ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, December 11, 2025, 4pm UK time</strong><br />
+                                <em>Morgan Saidel, Caltech, USA</em><br>
+								<em>"The First Dedicated Survey of Atmospheric Escape from Planets Orbiting Hot Stars"</em><br>
+								<br>
+								<em>Matt Lodge. University of Bristol, United Kingdom</em><br>
+								<em><a href="https://www.youtube.com/watch?v=uHIVi-Hl-Bw" target="_blank" rel="noopener noreferrer">"VIRGA v2.0: Fractal Aggregate Clouds in Warm Neptunes, Hot Jupiters and Brown Dwarfs"</a></em><br>
+                            </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, November 27, 2025, 4pm UK time</strong><br />
                                 <em>Richard Chatterjee, University of Oxford, United Kingdom</em><br>
