Add links to seminar presentations in HTML

--- a/seminars.html
+++ b/seminars.html
@@ -108,7 +108,7 @@ Released   : 20130308
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, December 11, 2025, 4pm UK time</strong><br />
                                 <em>Morgan Saidel, Caltech, USA</em><br>
-								<em>"The First Dedicated Survey of Atmospheric Escape from Planets Orbiting Hot Stars"</em><br>
+								<em><a href="https://www.youtube.com/watch?v=7jh69Ks1Pmw" target="_blank" rel="noopener noreferrer">"The First Dedicated Survey of Atmospheric Escape from Planets Orbiting Hot Stars"</a></em><br>
 								<br>
 								<em>Matt Lodge. University of Bristol, United Kingdom</em><br>
 								<em><a href="https://www.youtube.com/watch?v=uHIVi-Hl-Bw" target="_blank" rel="noopener noreferrer">"VIRGA v2.0: Fractal Aggregate Clouds in Warm Neptunes, Hot Jupiters and Brown Dwarfs"</a></em><br>
