Add seminar details for May 28, 2026

--- a/seminars.html
+++ b/seminars.html
@@ -83,6 +83,10 @@ Released   : 20130308
                                 <strong>Thursday, April 23, 2026, 4pm UK time</strong><br />
                                 <em>Cathal Maguire, University of Bristol, UK</em><br>
                             </li>
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, May 28, 2026, 4pm UK time</strong><br />
+                                <em>Ben Rackham, MIT, USA</em><br>
+                            </li>
                             <!---->
                         </ul>
                     </div>   
