Add speakers for upcoming seminars

--- a/seminars.html
+++ b/seminars.html
@@ -76,9 +76,14 @@ Released   : 20130308
                             <!---->
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, January 22, 2026, 4pm UK time</strong><br />
-                                <em>To be announced.</em><br>
-								
+                                <em>Ian Crossfield, University of Kansas, USA</em><br>						
                             </li>
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, February 26, 2026, 4pm UK time</strong><br />
+                                <em>Sarah Moran, Caltech, NASA Goddard and STScI, USA</em><br>
+								<br>
+								<em>Elijah Mullens, Cornell University, USA</em><br>
+							</li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, April 23, 2026, 4pm UK time</strong><br />
                                 <em>Cathal Maguire, University of Bristol, UK</em><br>
