Update speaker affiliation for February seminar

--- a/seminars.html
+++ b/seminars.html
@@ -80,8 +80,8 @@ Released   : 20130308
                             </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, February 26, 2026, 4pm UK time</strong><br />
-                                <em>Sarah Moran, Caltech, NASA Goddard and STScI, USA</em><br>
-								<br>
+                                <em>Sarah Moran, NASA Goddard and STScI, USA</em><br>
+
 								<em>Elijah Mullens, Cornell University, USA</em><br>
 							</li>
 							<li style="margin-bottom: 20px;">
