Add seminar details for March 26, 2026

--- a/seminars.html
+++ b/seminars.html
@@ -86,6 +86,10 @@ Released   : 20130308
 								<em>Elijah Mullens, Cornell University, USA</em><br>
 							</li>
 							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, March 26, 2026, 4pm UK time</strong><br />
+                                <em>Beth Biller, University of Edinburgh, UK</em><br>
+                            </li>
+							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, April 23, 2026, 4pm UK time</strong><br />
                                 <em>Cathal Maguire, University of Bristol, UK</em><br>
                             </li>
