Restore and update talk details for seminars

--- a/seminars.html
+++ b/seminars.html
@@ -75,11 +75,6 @@ Released   : 20130308
                         <ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
                             <!---->
 							<li style="margin-bottom: 20px;">
-                                <strong>Thursday, January 22, 2026, 4pm UK time</strong><br />
-                                <em>Ian Crossfield, University of Kansas, USA</em><br>	
-								<em>"Sulfur: A New Tracer in Exoplanet Atmospheres"</em><br>
-                            </li>
-							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, February 26, 2026, 4pm UK time</strong><br />
                                 <em>Sarah Moran, NASA Goddard and STScI, USA</em><br>
 
@@ -119,6 +114,11 @@ Released   : 20130308
 							  </iframe>
 						</div>
 						<ul style="list-style-type:none; padding-left:0; margin-top: 20px;">
+							<li style="margin-bottom: 20px;">
+                                <strong>Thursday, January 22, 2026, 4pm UK time</strong><br />
+                                <em>Ian Crossfield, University of Kansas, USA</em><br>	
+								<em><a href="youtu.be/v6tvTUIeshY" target="_blank" rel="noopener noreferrer">"Sulfur: A New Tracer in Exoplanet Atmospheres"</a></em><br>
+                            </li>
 							<li style="margin-bottom: 20px;">
                                 <strong>Thursday, December 11, 2025, 4pm UK time</strong><br />
                                 <em>Morgan Saidel, Caltech, USA</em><br>
